✨  Feature: #62 코드 통합 (#64)
* ♻️ Refactor: 자연어 검색 로직을 리팩토링 하였습니다.(헥사고날 구조 적용 및 내부 리팩토링), 스위칭 로직을 도입하였습니다.

* ✨  Feature: yakplus-batch의 코드 통합 초안

* 🐛 Fix: 변수 선언 안된 문제 수정

* 🐛 Fix: 임포트 문제 수정

* 🐛 Fix: 컴파일 오류 수정

* 📦 Chore: 불필요한 import 삭제

* 📦 Chore: Swagger 의존성 및 설정 추가

* ✨ Feat: 컨트롤러 Swagger 적용

* ♻️ Refactor: 인덱스 이름 상수로 변경 및 매퍼 분리

---------

Co-authored-by: leelise <jaszzzzz@naver.com>
Co-authored-by: pcb7893@naver.com <122460524+chanbyoung@users.noreply.github.com>